--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ sqlalchemy==2.0.25
 # Data validation
 pydantic==2.5.3
 pydantic-settings==2.1.0
+email-validator==2.1.0
 
 # HTTP client for MiniMax API
 requests==2.31.0
