Clean up codebase: Remove unverified voices, keep only verified voice IDs
- Removed all unverified voice files and directories
- Kept only 4 verified voice IDs with confirmed characteristics:
  - American Female (moss_audio_fdad4786-ab84-11f0-a816-023f15327f7a)
  - Marcus American Male (moss_audio_a59cd561-ab87-11f0-a74c-2a7a0b4baedc)
  - Ezinne Nigerian Female (moss_audio_141d8c4c-a6f8-11f0-84c1-0ec6fa858d82)
  - Odia Nigerian Male (moss_audio_4e6eb029-ab89-11f0-a74c-2a7a0b4baedc)
- Updated README with production-ready documentation
- Simplified package.json scripts
- Generated clean voice showcase with 8 variations
- Ready for production deployment

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "main": "minimax_tts.js",
   "scripts": {
     "start": "node minimax_tts.js",
-    "test": "node test.js"
+    "test": "node test.js",
+    "showcase": "node generate_voice_showcase.js",
+    "callwaiting": "node generate_callwaiting_audio.js"
   },
   "dependencies": {
     "express": "^4.18.2",
